--- a/main/docker-compose.yml
+++ b/main/docker-compose.yml
@@ -4,12 +4,22 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: 'python manage.py runserver 0.0.0.0:8000'
     ports:
       - 8000:8000
     volumes:
       - .:/app
-    depends_on: 
+    depends_on:
       - db
+
+  queue:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: 'python -u consumer.py'
+    depends_on:
+      - db
+
   db:
     image: mysql:5.7.22
     restart: always
